--- a/common/css/style.css
+++ b/common/css/style.css
@@ -16,6 +16,8 @@ a {
 
 body {
     text-align: center;
+    width: 100%;
+    margin: 0 auto;
 }
 
 /*////////////////////////////////////////////////////////
@@ -132,31 +134,6 @@ SLide
     height: 1020px;
 }
 
-/*.contents-box:nth-child(1) {
-    z-index: 10;
-    background-color: white;
-}
-
-.contents-box:nth-child(2) {
-    z-index: 20;
-    background-color: white;
-}
-
-.contents-box:nth-child(3) {
-    z-index: 30;
-    background-color: white;
-}
-
-.contents-box:nth-child(4) {
-    z-index: 40;
-    background-color: white;
-}
-
-.contents-box:nth-child(5) {
-    z-index: 50;
-    background-color: white;
-}*/
-
 .contents-title {
     font-size: 4rem;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -235,6 +212,17 @@ shop news
     margin: 5% auto 10%;
     border-bottom: solid 3px rgb(80, 54, 21);
     padding-bottom: 1%;
+    font-family: 'Kosugi Maru', sans-serif;
+    font-weight: normal;
+    color: rgb(61, 30, 5);
+}
+
+#born-sp {
+    display: inline-block;
+    margin-left: 3%;
+    transform: rotate(20deg);
+    font-size: 1.5rem;
+    color: rgba(61, 30, 5, 0.7);
 }
 
 #news-box {
@@ -243,6 +231,10 @@ shop news
 
 .news-inner {
     width: 50%;
+}
+
+.news-ul {
+    margin-top: 0;
 }
 
 .news-list {
@@ -410,7 +402,7 @@ h1 {
 
 #about-imgbox {
     width: 60%;
-    margin: 0 auto;
+    margin: 0 auto 3%;
 }
 
 #about-mainImg {
@@ -428,7 +420,6 @@ h1 {
 .about-inner {
     box-sizing: border-box;
     width: 50%;
-    height: 87%;
     padding: 2% 5%;
 }
 
@@ -439,7 +430,7 @@ h1 {
 .about-h2 {
     font-size: 1rem;
     text-align: center;
-    margin-bottom: 10%;
+    margin-bottom: 8%;
     font-family: 'Open Sans Condensed', sans-serif;
     font-family: 'Bree Serif', serif;
     font-family: 'Patrick Hand', cursive;
